--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,32 @@
+buildscript {
+    ext {}
+    repositories {
+        jcenter()
+        flatDir {
+            dirs 'localTemp'
+        }
+    }
+    dependencies {
+
+        // TODO: 2.0 configuration - move these to base connector?
+        // Will artifactory/POM help take care of these
+        classpath 'org.yaml:snakeyaml:1.29'
+        classpath 'org.freemarker:freemarker:2.3.31'
+        classpath 'org.codehaus.groovy:groovy-all:3.0.8'
+
+        classpath(group: 'com.exclamationlabs.connid.base.config.plugin', name: 'connector-base-config-plugin', version: '2.0-SNAPSHOT')
+    }
+}
+
 plugins {
     id 'java'
 }
 
 repositories {
     jcenter()
+    flatDir {
+        dirs 'localTemp'
+    }
 
     maven {
         url "https://artifactory.exclamationlabs.com/artifactory/libs-release-local"
@@ -14,16 +37,31 @@ repositories {
     }
 }
 
+apply plugin: 'com.exclamationlabs.connid.base.config.plugin'
+
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
 def versionNumber = "${project_version}"
+
+generateConfiguration {
+
+}
 
 dependencies {
 
     // Required for MidPoint runtime
     runtimeOnly 'org.codehaus.groovy:groovy:2.5.2'
     runtimeOnly 'com.evolveum.polygon:connector-common:1.5.0.0'
+
+    // TODO: temp - remove this later for 2.0 once base connector is published
+    implementation 'org.apache.commons:commons-lang3:3.8.1'
+    implementation 'net.tirasa.connid:connector-test-common:1.5.0.0'
+    implementation 'com.auth0:java-jwt:3.10.3'
+
+    //implementation 'javax.validation:validation-api:2.0.1.Final'
+    //implementation 'org.hibernate:hibernate-validator:5.2.4.Final'
+    implementation('org.springframework.boot:spring-boot-starter-validation:2.5.5')
 
     // HTTP/RESTful support
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -34,8 +72,20 @@ dependencies {
 
     implementation "com.exclamationlabs.connid:connector-base:${base_connector_version}-+"
 
-    testImplementation "com.exclamationlabs.connid:connector-base-test-support:${base_connector_version}-+"
+    // TODO: switch back
+    //testImplementation "com.exclamationlabs.connid:connector-base-test-support:${base_connector_version}-+"
+    testImplementation "com.exclamationlabs.connid:connector-base-test-support:1.2.0-+"
+
     testImplementation 'net.tirasa.connid:connector-framework-internal:1.5.0.0'
+
+}
+
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src/main/java', 'generatedConfig']
+        }
+    }
 }
 
 task copyDependencyJars(type: Copy) {
@@ -50,6 +100,7 @@ task copyDependencyJars(type: Copy) {
 
 task baseClean(type: Delete) {
     delete 'custom'
+    delete 'generatedConfig'
 }
 
 jar {
@@ -62,6 +113,8 @@ jar {
                 "ConnectorBundle-Name": project.name)
     }
 }
+
+compileJava.dependsOn('generateConfiguration')
 
 clean.dependsOn('baseClean')
 jar.dependsOn('copyDependencyJars')
