--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,3 @@
-project_version=1.0.2
-base_connector_version=1.2.0
+project_version=1.1.4
+#base_connector_version=1.2.0
+base_connector_version=2.0
