--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-project_version=1.1.5
-#base_connector_version=1.2.0
-base_connector_version=2.0
+project_version=2.0.1
+base_connector_version=2.0.1
+config_plugin_version=2.0.1
