--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ buildscript {
     repositories {
         maven {
             url "https://artifactory.exclamationlabs.com/artifactory/libs-release-local"
+            credentials {
+                username = System.getenv('ARTIFACTORY_GRADLE_USER')
+                password = System.getenv('ARTIFACTORY_GRADLE_PASS')
+            }
         }
     }
     dependencies {
@@ -19,6 +23,10 @@ repositories {
 
     maven {
         url "https://artifactory.exclamationlabs.com/artifactory/libs-release-local"
+        credentials {
+            username = System.getenv('ARTIFACTORY_GRADLE_USER')
+            password = System.getenv('ARTIFACTORY_GRADLE_PASS')
+        }
     }
 
     maven {
