--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
-project_version=2.0.2
-base_connector_version=2.0.1
-config_plugin_version=2.0.1
+project_version=2.0.3
+base_connector_version=2.1.1
+config_plugin_version=2.1.3
+test_connector_version=2.1.1
+local_build_version=9001
