--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,10 @@ buildscript {
 
 plugins {
     id 'java'
+    id 'maven-publish'
     id 'com.google.cloud.artifactregistry.gradle-plugin' version '2.2.0'
+    id 'com.github.sherter.google-java-format' version '0.9'
+
 }
 
 repositories {
@@ -25,22 +28,31 @@ repositories {
     }
 }
 
+googleJavaFormat {
+    exclude 'generatedConfig/**/*.java'
+}
+
 apply plugin: 'com.exclamationlabs.connid.base.config.plugin'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
+
+def build_version = System.getenv('BUILD_NUMBER') == null ? System.currentTimeMillis() : System.getenv('BUILD_NUMBER')
+project.version="${project_version}-${build_version}"
+
+group = 'com.exclamationlabs.connid'
 
 def versionNumber = "${project_version}"
 
 dependencies {
 
     // Required for MidPoint runtime
-    runtimeOnly 'org.codehaus.groovy:groovy:2.5.2'
+    runtimeOnly 'org.codehaus.groovy:groovy:3.0.8'
     runtimeOnly 'com.evolveum.polygon:connector-common:1.5.0.0'
 
     // HTTP/RESTful support
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.10'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
 
     // H2 database support - for this example project
     implementation "com.h2database:h2:1.4.200"
@@ -52,8 +64,8 @@ dependencies {
     testImplementation 'net.tirasa.connid:connector-framework-internal:1.5.0.0'
 
     // Example: pulling down source code and javadocs
-    //implementation "com.exclamationlabs.connid:connector-base:${base_connector_version}-+:javadoc"
-    //implementation "com.exclamationlabs.connid:connector-base:${base_connector_version}-+:source"
+    // implementation "com.exclamationlabs.connid:connector-base:${base_connector_version}-+:javadoc"
+    // implementation "com.exclamationlabs.connid:connector-base:${base_connector_version}-+:source"
 
 }
 
@@ -81,9 +93,14 @@ task baseClean(type: Delete) {
     delete 'generatedConfig'
 }
 
-jar {
-    duplicatesStrategy DuplicatesStrategy.EXCLUDE
-    archiveName("${project.name}-${versionNumber}-connector.jar")
+
+def fatClassifierName = 'fat'
+def thinClassifierName = 'thin'
+
+task fatJar(type: Jar) {
+
+    archiveClassifier = fatClassifierName
+    archiveName("${project.name}-${project.version}-${fatClassifierName}.jar")
     from 'custom', 'build/classes/java/main', 'src/main/resources'
 
     manifest {
@@ -93,7 +110,35 @@ jar {
     }
 }
 
+task thinJar(type: Jar) {
+
+    archiveClassifier = thinClassifierName
+    archiveName("${project.name}-${project.version}-${thinClassifierName}.jar")
+    from 'build/classes/java/main'
+
+}
+
+thinJar.dependsOn('compileJava')
+
+fatJar.dependsOn('compileJava', 'copyDependencyJars')
 compileJava.dependsOn('generateConfiguration')
 
 clean.dependsOn('baseClean')
-jar.dependsOn('copyDependencyJars')
+
+publishing {
+    publications {
+        connector_impl(MavenPublication) {
+            artifact fatJar
+            artifact thinJar
+        }
+    }
+    repositories {
+        maven {
+            url "artifactregistry://us-east1-maven.pkg.dev/provision-general-operations/provision-public/"
+        }
+    }
+}
+
+test {
+    useJUnitPlatform() {}
+}
