FIN-10678 - 4.0 beta version for Pagination/Filtering

--- a/configuration.structure.yml
+++ b/configuration.structure.yml
@@ -4,6 +4,7 @@ configurationClass:
   name: 'H2ExampleConfiguration'
   package: 'com.exclamationlabs.connid.base.h2example.configuration'
 rest: true # io-error-retries
+results: true
 service: true # service-url
 custom:
   items:
